# SU3_Lattice

./: .gitignore  CMakeLists.txt  HDQCD.hh  README.md  auxiliary.hh  lattice_io.hh  main.cpp  mainHDQCD.cpp  mainQuenched.cpp  observables.hh  pureGauge.hh
